Harden swing confirmation semantics