@@ -7,7 +7,8 @@ import java.time.DayOfWeek;
 import java.time.Instant;
 import java.time.ZoneOffset;
 import java.util.Arrays;
-import java.util.HashSet;
+import java.util.Collections;
+import java.util.LinkedHashSet;
 import java.util.Objects;
 import java.util.Set;
 
@@ -51,11 +52,11 @@ public class DayOfWeekRule extends AbstractRule {
         DateTimeIndicator validatedTimeIndicator = Objects.requireNonNull(timeIndicator, "timeIndicator");
         Objects.requireNonNull(daysOfWeek, "daysOfWeek");
         DayOfWeek[] copiedDays = Arrays.copyOf(daysOfWeek, daysOfWeek.length);
-        Set<DayOfWeek> copiedDaySet = new HashSet<>(copiedDays.length);
+        Set<DayOfWeek> copiedDaySet = new LinkedHashSet<>(copiedDays.length);
         for (DayOfWeek day : copiedDays) {
             copiedDaySet.add(Objects.requireNonNull(day, "dayOfWeek"));
         }
-        return new Config(validatedTimeIndicator, Set.copyOf(copiedDaySet));
+        return new Config(validatedTimeIndicator, Collections.unmodifiableSet(copiedDaySet));
     }
 
     /** This rule does not use the {@code tradingRecord}. */
